--- a/index.html
+++ b/index.html
@@ -20,57 +20,58 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Filled Red:</td>
+                        <td>Filled Black:</td>
                         <td>Fatal</td>
                     </tr>
                     <tr>
-                        <td>Filled Blue:</td>
+                        <td>Filled Gray:</td>
                         <td>Non-Fatal</td>
                     </tr>
                     <tr>
-                        <td>Yellow Border:</td>
+                        <td>Blue Stroke/Border:</td>
                         <td>Summer</td>
                     </tr>
                     <tr>
-                        <td>Brown Border:</td>
+                        <td>Yellow Stroke/Border:</td>
                         <td>Fall</td>
                     </tr>
                     <tr>
-                        <td>White Border:</td>
+                        <td>Gray Stroke/Border:</td>
                         <td>Winter</td>
                     </tr>
                     <tr>
-                        <td>Green Border:</td>
+                        <td>Green Stroke/Border:</td>
                         <td>Spring</td>
                     </tr>
                 </tbody>
             </table>
         </div>
         <div class="hidden" id="tooltip" >
-            <h1>Tooltip</h1>
+            <h5>Accident Information</h5>
+            <hr />
             <table>
                 <tr>
-                    <td>Aircraft Type</td>
+                    <td>Aircraft Type:</td>
                     <td id="ac-type"></td>
                 </tr>
                 <tr>
-                    <td>Location</td>
+                    <td>Location:</td>
                     <td id="location"></td>
                 </tr>
                 <tr>
-                    <td>Date</td>
+                    <td>Date:</td>
                     <td id="date"></td>
                 </tr>
                 <tr>
-                    <td>NTSB ID</td>
+                    <td>NTSB ID:</td>
                     <td id="ntsb"></td>
                 </tr>
                 <tr>
-                    <td>Total Injuries</td>
+                    <td>Total Injuries:</td>
                     <td id="injury"></td>
                 </tr>
                 <tr>
-                    <td>Total Fatalities</td>
+                    <td>Total Fatalities:</td>
                     <td id="fatal"></td>
                 </tr>
             </table>
